force-app/main/default/objects/Care__c/Care__c.object-meta.xml
<CustomObject>
    <label>Care Mapping</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>