force-app/main/default/objects/Care__c/fields/Annualized_value_estimation__c.field-meta.xml
<CustomField>
    <fullName>Annualized_value_estimation__c</fullName>
    <label>Annualized value estimation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>