force-app/main/default/objects/Care__c/fields/Focus_Priority__c.field-meta.xml
<CustomField>
    <fullName>Focus_Priority__c</fullName>
    <label>Focus Priority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>