force-app/main/default/objects/Care__c/fields/Focus_Segment__c.field-meta.xml
<CustomField>
    <fullName>Focus_Segment__c</fullName>
    <label>Focus Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-Machinery</fullName>
            </value>
            <value>
                <fullName>Durable Goods</fullName>
            </value>
            <value>
                <fullName>Industrial Production</fullName>
            </value>
            <value>
                <fullName>Capital goods - Fluid management</fullName>
            </value>
            <value>
                <fullName>Capital goods - Lifting &amp; Handling</fullName>
            </value>
            <value>
                <fullName>Capital goods - Transmission</fullName>
            </value>
            <value>
                <fullName>Maintenance - Mining &amp; Quarrying</fullName>
            </value>
            <value>
                <fullName>Maintenance - Construction Aggregates</fullName>
            </value>
            <value>
                <fullName>Maintenance - Petrochemicals</fullName>
            </value>
            <value>
                <fullName>Maintenance - Metal transformation</fullName>
            </value>
            <value>
                <fullName>Maintenance - Power Generation</fullName>
            </value>
            <value>
                <fullName>Maintenance - Waste &amp; Wasterwater</fullName>
            </value>
            <value>
                <fullName>Maintenance - Pulp &amp; Paper</fullName>
            </value>
            <value>
                <fullName>Maintenance - Food &amp; Pharma</fullName>
            </value>
            <value>
                <fullName>Maintenance - Industrial Maintenance</fullName>
            </value>
            <value>
                <fullName>Maintenance - Railways</fullName>
            </value>
            <value>
                <fullName>Maintenance - Vehicle Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>IA - AgCon</fullName>
            </value>
            <value>
                <fullName>IA - Electronics</fullName>
            </value>
            <value>
                <fullName>IA - Filtration</fullName>
            </value>
            <value>
                <fullName>IA - Appliances</fullName>
            </value>
            <value>
                <fullName>IA - Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>