force-app/main/default/objects/Care__c/fields/Industry_NumberofEmployees__c.field-meta.xml
<CustomField>
    <fullName>Industry_NumberofEmployees__c</fullName>
    <formula>Industry__c+&apos;-&apos;+Number_Of_Employees__c</formula>
    <label>Industry_NumberofEmployees</label>
    <type>Text</type>
</CustomField>