force-app/main/default/objects/Care__c/fields/Industry_priority__c.field-meta.xml
<CustomField>
    <fullName>Industry_priority__c</fullName>
    <label>Industry priority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>