force-app/main/default/objects/Care__c/fields/Lead_classification_basis_value__c.field-meta.xml
<CustomField>
    <fullName>Lead_classification_basis_value__c</fullName>
    <label>Lead classification basis value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>