force-app/main/default/objects/Care__c/fields/Lead_priority__c.field-meta.xml
<CustomField>
    <fullName>Lead_priority__c</fullName>
    <label>Lead priority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>