force-app/main/default/objects/Care__c/fields/Number_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Employees__c</fullName>
    <label>Number Of Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>